Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTI1553.H

typedef void VOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long MSGADDR;
typedef unsigned long LISTADDR;
typedef unsigned long * LPMSGADDR;
typedef int BOOL;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
typedef int SCHNDX;
typedef struct
{
    ULONG  ctrlflags;           //User writes message configuration options
    USHORT flag1;               //Card writes message flag 1
    USHORT flag2;               //Card writes message flag 2
    USHORT errflags;            //Card writes error flags
    USHORT actflags;            //Card writes activity flags
    USHORT resptime1;           //Card writes response time 1
    USHORT resptime2;           //Card writes response time 2
    USHORT datacount;           //Card writes data count
    USHORT extflag;             //Driver writes external flags
    ULONG  timetag;             //Card writes time tag
    ULONG  elapsetime;          //Card writes elapsed time
    ULONG  preaddr;             //Driver writes pre-proc address
    ULONG  postaddr;            //Driver writes post-proc address
    ULONG  timetagh;            //Card writes extended timetag
    USHORT resv18;              //Reserved field
    USHORT resv19;              //Reserved field
    USHORT cwd1;                //User writes command word 1
    USHORT cwd2;                //User writes command word 2
    USHORT swd1;                //Card writes status word 1
    USHORT swd2;                //Card writes status word 2
    USHORT data[32];            //User writes data words
    USHORT extra[8];            //User writes extra words
} XMITFIELDS1553;
typedef XMITFIELDS1553 * LPXMITFIELDS1553;
typedef struct
{
    USHORT msgflag;             //Driver writes message flags
    USHORT msgopt;              //Driver writes message options
    USHORT msgerr;              //Card writes message errors
    USHORT msgact;              //Card writes message activity
    USHORT resptime1;           //Card writes response time 1
    USHORT resptime2;           //Card writes response time 2
    USHORT datacount;           //Card writes data count
    USHORT extflag;             //Driver writes external flags
    union {
        ULONG  timetag;         //Card writes time tag
        ULONG  hitcount;        //Card writes hit count
    };
    union {
        ULONG  elapsetime;      //Card writes elapsed time
        ULONG  mintime;         //Card writes min time
        ULONG  maxtime;         //Card writes max time
    };
    ULONG  preaddr;             //Driver writes pre-proc address
    ULONG  postaddr;            //Driver writes post-proc address
    ULONG  timetagh;            //Card writes extended timetag
    USHORT resv18;              //Reserved field
    USHORT resv19;              //Reserved field
    USHORT cwd1;                //Card/User writes command word 1 (R/T)
    USHORT cwd2;                //Card/User writes command word 2 (R/T)
    USHORT swd1;                //Card writes status word 1
    USHORT swd2;                //Card writes status word 2
    USHORT data[32];            //User/Card writes data words (R/T)
    USHORT extra[8];            //User/Card writes extra words (R/T)
} MSGFIELDS1553;
typedef MSGFIELDS1553 * LPMSGFIELDS1553;
BTI1553API INT __stdcall BTI1553_ListDataRd(LPUSHORT buf,INT count,LISTADDR listaddr,HCORE handleval);
BTI1553API INT __stdcall BTI1553_ListDataWr(LPUSHORT buf,INT count,LISTADDR listaddr,HCORE handleval);
BTI1553API BOOL __stdcall BTI1553_ListMultiBlockRd(LPUSHORT buf,LPINT blkcountptr,LISTADDR listaddr,HCORE handleval);
BTI1553API BOOL __stdcall BTI1553_ListMultiBlockWr(LPUSHORT buf,INT blkcount,LISTADDR listaddr,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_MonConfig(ULONG configval,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_MonFilterSA(INT taval,ULONG rcvsamask,ULONG xmtsamask,ULONG rcvmcmask,ULONG xmtmcmask,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_MonFilterTA(ULONG tamask,INT channum,HCORE handleval);
BTI1553API MSGADDR __stdcall BTI1553_MsgBlockRd(LPMSGFIELDS1553 buf,MSGADDR msgaddr,HCORE handleval);
BTI1553API MSGADDR __stdcall BTI1553_MsgBlockWr(LPMSGFIELDS1553 buf,MSGADDR msgaddr,HCORE handleval);
BTI1553API VOID __stdcall BTI1553_MsgDataRd(LPUSHORT buf,INT count,MSGADDR msgaddr,HCORE handleval);
BTI1553API VOID __stdcall BTI1553_MsgDataWr(LPUSHORT buf,INT count,MSGADDR msgaddr,HCORE handleval);
BTI1553API ULONG __stdcall BTI1553_MsgFieldRd(USHORT fieldtype,MSGADDR msgaddr,HCORE handleval);
BTI1553API ULONG __stdcall BTI1553_MsgFieldWr(ULONG fieldval,USHORT fieldtype,MSGADDR msgaddr,HCORE handleval);
BTI1553API VOID __stdcall BTI1553_MsgGroupRd(INT nummsgs,LPMSGFIELDS1553 msgflds,LPMSGADDR msgaddrptr,HCORE handleval);
BTI1553API VOID __stdcall BTI1553_MsgGroupWr(INT nummsgs,LPMSGFIELDS1553 msgflds,LPMSGADDR msgaddrptr,HCORE handleval);
BTI1553API BOOL __stdcall BTI1553_MsgSkipRd(MSGADDR msgaddr,HCORE handleval);
BTI1553API VOID __stdcall BTI1553_MsgSkipWr(BOOL skip,MSGADDR msgaddr,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_MsgSyncDefine(BOOL enableflag,USHORT syncmask,USHORT pinpolarity,MSGADDR msgaddr,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_MsgTriggerDefine(BOOL enableflag,USHORT trigmask,USHORT trigval,USHORT pinpolarity,MSGADDR msgaddr,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_ParamAmplitudeConfig(ULONG configval,USHORT dacval,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_ParamAmplitudeGet(LPUSHORT dacval,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_PlayConfig(ULONG configval,ULONG tamask,INT channum,HCORE handleval);
BTI1553API INT __stdcall BTI1553_PlayStatus(INT channum,HCORE handleval);
BTI1553API USHORT __stdcall BTI1553_PlayWr(LPUSHORT buf,USHORT bufcount,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_RTConfig(ULONG configval,INT taval,INT channum,HCORE handleval);
BTI1553API LISTADDR __stdcall BTI1553_RTCreateList(ULONG listconfigval,INT count,ULONG msgconfigval,BOOL mcflag,INT taval,BOOL trflag,INT saval,INT channum,HCORE handleval);
BTI1553API MSGADDR __stdcall BTI1553_RTCreateMsg(ULONG configval,BOOL mcflag,INT taval,BOOL trflag,INT saval,INT channum,HCORE handleval);
BTI1553API MSGADDR __stdcall BTI1553_RTGetMsg(BOOL mcflag,INT taval,BOOL trflag,INT saval,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_RTReset(INT taval,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_RTResponseTimeSet(INT resptime,INT taval,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_RTSetMode(ULONG configval,INT taval,INT channum,HCORE handleval);
BTI1553API USHORT __stdcall BTI1553_RTSWDRd(INT taval,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_RTSWDWr(USHORT swdval,INT taval,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_RTSyncDefine(BOOL enableflag,USHORT syncmask,USHORT pinpolarity,INT taval,ULONG rcvsamask,ULONG xmtsamask,ULONG rcvmcmask,ULONG xmtmcmask,INT channum,HCORE handleval);
BTI1553API USHORT __stdcall BTI1553_ValPackCWD(INT TAval,INT TRflag,INT SAval,INT WCval);
BTI1553API VOID __stdcall BTI1553_ValUnpackCWD(USHORT CWDval,LPINT TAval,LPINT TRflag,LPINT SAval,LPINT WCval);
/**
*
*  Internal functions used by the BTI1553 Driver.
*
**/

BTI1553API LISTADDR __stdcall BTI1553_BCCreateListEx(ULONG listconfigval,INT skipval,INT count,ULONG msgconfigval,USHORT cwd1,USHORT cwd2,LPUSHORT data,HCORE handleval);
BTI1553API LISTADDR __stdcall BTI1553_BCCreateListExx(ULONG listconfigval,INT skipval,INT count,ULONG msgconfigval,USHORT cwd1,USHORT cwd2,LPUSHORT data,HCORE handleval);
BTI1553API MSGADDR __stdcall BTI1553_BCGetMsg(INT index,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_BCIMGapRd(LPUSHORT gapval,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_BCIMGapWr(USHORT gapval,INT channum,HCORE handleval);
BTI1553API SCHNDX __stdcall BTI1553_BCSchedBranchEx(USHORT condition1,USHORT condition2,USHORT condition3,USHORT opcode,SCHNDX destindex,INT channum,HCORE handleval);
BTI1553API SCHNDX __stdcall BTI1553_BCSchedCallEx(USHORT condition1,USHORT condition2,USHORT condition3,USHORT opcode,SCHNDX destindex,INT channum,HCORE handleval);
BTI1553API SCHNDX __stdcall BTI1553_BCSchedLogEx(USHORT condition1,USHORT condition2,USHORT condition3,USHORT opcode,USHORT tagval,INT channum,HCORE handleval);
BTI1553API SCHNDX __stdcall BTI1553_BCSchedNop(INT channum,HCORE handleval);
BTI1553API SCHNDX __stdcall BTI1553_BCSchedRetryEx(USHORT condition1,USHORT condition2,USHORT condition3,USHORT retryflag,USHORT retries,INT channum,HCORE handleval);
BTI1553API SCHNDX __stdcall BTI1553_BCSchedUser(ULONG useraddr,INT channum,HCORE handleval);
BTI1553API SCHNDX __stdcall BTI1553_BCSetEntry(INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_BCTransmitMsgBlkEx(BOOL writeflag,INT count,LPXMITFIELDS1553 xmitfields,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_BCTransmitMsgBlkInit(INT maxcount,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_BCTransmitMsgBlkRd(INT count,LPXMITFIELDS1553 xmitfields,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_BCTransmitMsgBlkWr(INT count,LPXMITFIELDS1553 xmitfields,INT channum,HCORE handleval);
BTI1553API USHORT __stdcall BTI1553_BlkAddr(INT taval,INT channum,HCORE handleval);
BTI1553API USHORT __stdcall BTI1553_BlkOptRd(INT taval,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_BlkOptWr(USHORT rtopt,INT taval,INT channum,HCORE handleval);
BTI1553API ULONG __stdcall BTI1553_BlkPtrRd(INT taval,INT channum,HCORE handleval);
BTI1553API VOID __stdcall BTI1553_BlkPtrWr(ULONG descaddr,INT taval,INT channum,HCORE handleval);