Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI1553VB.BAS

Public Declare Function BTI1553_ListDataRd Lib "BTI1553.DLL" Alias "_BTI1553_ListDataRd@16" (ByRef buf As Integer, ByVal count As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ListDataWr Lib "BTI1553.DLL" Alias "_BTI1553_ListDataWr@16" (ByRef buf As Integer, ByVal count As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ListMultiBlockRd Lib "BTI1553.DLL" Alias "_BTI1553_ListMultiBlockRd@16" (ByRef buf As Integer, ByRef blkcountptr As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ListMultiBlockWr Lib "BTI1553.DLL" Alias "_BTI1553_ListMultiBlockWr@16" (ByRef buf As Integer, ByVal blkcount As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_MonConfig Lib "BTI1553.DLL" Alias "_BTI1553_MonConfig@12" (ByVal configval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_MonFilterSA Lib "BTI1553.DLL" Alias "_BTI1553_MonFilterSA@28" (ByVal taval As Long, ByVal rcvsamask As Long, ByVal xmtsamask As Long, ByVal rcvmcmask As Long, ByVal xmtmcmask As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_MonFilterTA Lib "BTI1553.DLL" Alias "_BTI1553_MonFilterTA@12" (ByVal tamask As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_MsgBlockRd Lib "BTI1553.DLL" Alias "_BTI1553_MsgBlockRd@12" (ByRef buf As MSGFIELDS1553, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_MsgBlockWr Lib "BTI1553.DLL" Alias "_BTI1553_MsgBlockWr@12" (ByRef buf As MSGFIELDS1553, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Sub BTI1553_MsgDataRd Lib "BTI1553.DLL" Alias "_BTI1553_MsgDataRd@16" (ByRef buf As Integer, ByVal count As Long, ByVal msgaddr As Long, ByVal handleval As Long)
Public Declare Sub BTI1553_MsgDataWr Lib "BTI1553.DLL" Alias "_BTI1553_MsgDataWr@16" (ByRef buf As Integer, ByVal count As Long, ByVal msgaddr As Long, ByVal handleval As Long)
Public Declare Function BTI1553_MsgFieldRd Lib "BTI1553.DLL" Alias "_BTI1553_MsgFieldRd@12" (ByVal fieldtype As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_MsgFieldWr Lib "BTI1553.DLL" Alias "_BTI1553_MsgFieldWr@16" (ByVal fieldval As Long, ByVal fieldtype As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Sub BTI1553_MsgGroupRd Lib "BTI1553.DLL" Alias "_BTI1553_MsgGroupRd@16" (ByVal nummsgs As Long, ByRef msgflds As MSGFIELDS1553, ByRef msgaddrptr As Long, ByVal handleval As Long)
Public Declare Sub BTI1553_MsgGroupWr Lib "BTI1553.DLL" Alias "_BTI1553_MsgGroupWr@16" (ByVal nummsgs As Long, ByRef msgflds As MSGFIELDS1553, ByRef msgaddrptr As Long, ByVal handleval As Long)
Public Declare Function BTI1553_MsgSkipRd Lib "BTI1553.DLL" Alias "_BTI1553_MsgSkipRd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Sub BTI1553_MsgSkipWr Lib "BTI1553.DLL" Alias "_BTI1553_MsgSkipWr@12" (ByVal skip As Long, ByVal msgaddr As Long, ByVal handleval As Long)
Public Declare Function BTI1553_MsgSyncDefine Lib "BTI1553.DLL" Alias "_BTI1553_MsgSyncDefine@20" (ByVal enableflag As Long, ByVal syncmask As Integer, ByVal pinpolarity As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_MsgTriggerDefine Lib "BTI1553.DLL" Alias "_BTI1553_MsgTriggerDefine@24" (ByVal enableflag As Long, ByVal trigmask As Integer, ByVal trigval As Integer, ByVal pinpolarity As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ParamAmplitudeConfig Lib "BTI1553.DLL" Alias "_BTI1553_ParamAmplitudeConfig@16" (ByVal configval As Long, ByVal dacval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ParamAmplitudeGet Lib "BTI1553.DLL" Alias "_BTI1553_ParamAmplitudeGet@12" (ByRef dacval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_PlayConfig Lib "BTI1553.DLL" Alias "_BTI1553_PlayConfig@16" (ByVal configval As Long, ByVal tamask As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_PlayStatus Lib "BTI1553.DLL" Alias "_BTI1553_PlayStatus@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_PlayWr Lib "BTI1553.DLL" Alias "_BTI1553_PlayWr@16" (ByRef buf As Integer, ByVal bufcount As Integer, ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Function BTI1553_RTConfig Lib "BTI1553.DLL" Alias "_BTI1553_RTConfig@16" (ByVal configval As Long, ByVal taval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_RTCreateList Lib "BTI1553.DLL" Alias "_BTI1553_RTCreateList@36" (ByVal listconfigval As Long, ByVal count As Long, ByVal msgconfigval As Long, ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_RTCreateMsg Lib "BTI1553.DLL" Alias "_BTI1553_RTCreateMsg@28" (ByVal configval As Long, ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_RTGetMsg Lib "BTI1553.DLL" Alias "_BTI1553_RTGetMsg@24" (ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_RTReset Lib "BTI1553.DLL" Alias "_BTI1553_RTReset@12" (ByVal taval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_RTResponseTimeSet Lib "BTI1553.DLL" Alias "_BTI1553_RTResponseTimeSet@16" (ByVal resptime As Long, ByVal taval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_RTSetMode Lib "BTI1553.DLL" Alias "_BTI1553_RTSetMode@16" (ByVal configval As Long, ByVal taval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_RTSWDRd Lib "BTI1553.DLL" Alias "_BTI1553_RTSWDRd@12" (ByVal taval As Long, ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Function BTI1553_RTSWDWr Lib "BTI1553.DLL" Alias "_BTI1553_RTSWDWr@16" (ByVal swdval As Integer, ByVal taval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_RTSyncDefine Lib "BTI1553.DLL" Alias "_BTI1553_RTSyncDefine@40" (ByVal enableflag As Long, ByVal syncmask As Integer, ByVal pinpolarity As Integer, ByVal taval As Long, ByVal rcvsamask As Long, ByVal xmtsamask As Long, ByVal rcvmcmask As Long, ByVal xmtmcmask As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ValPackCWD Lib "BTI1553.DLL" Alias "_BTI1553_ValPackCWD@16" (ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal wcval As Long) As Integer
Public Declare Sub BTI1553_ValUnpackCWD Lib "BTI1553.DLL" Alias "_BTI1553_ValUnpackCWD@20" (ByVal cwdval As Integer, ByRef taval As Long, ByRef trflag As Long, ByRef saval As Long, ByRef wcval As Long)
Public Declare Function BTI1553_BCCreateListEx Lib "BTI1553.DLL" Alias "_BTI1553_BCCreateListEx@32" (ByVal listconfigval As Long, ByVal skipval As Long, ByVal count As Long, ByVal msgconfigval As Long, ByVal cwd1 As Integer, ByVal cwd2 As Integer, ByRef data As Integer, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCCreateListExx Lib "BTI1553.DLL" Alias "_BTI1553_BCCreateListExx@32" (ByVal listconfigval As Long, ByVal skipval As Long, ByVal count As Long, ByVal msgconfigval As Long, ByVal cwd1 As Integer, ByVal cwd2 As Integer, ByRef data As Integer, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCGetMsg Lib "BTI1553.DLL" Alias "_BTI1553_BCGetMsg@12" (ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCIMGapRd Lib "BTI1553.DLL" Alias "_BTI1553_BCIMGapRd@12" (ByRef gapval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCIMGapWr Lib "BTI1553.DLL" Alias "_BTI1553_BCIMGapWr@12" (ByVal gapval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCSchedBranchEx Lib "BTI1553.DLL" Alias "_BTI1553_BCSchedBranchEx@28" (ByVal condition1 As Integer, ByVal condition2 As Integer, ByVal condition3 As Integer, ByVal opcode As Integer, ByVal destindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCSchedCallEx Lib "BTI1553.DLL" Alias "_BTI1553_BCSchedCallEx@28" (ByVal condition1 As Integer, ByVal condition2 As Integer, ByVal condition3 As Integer, ByVal opcode As Integer, ByVal destindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCSchedLogEx Lib "BTI1553.DLL" Alias "_BTI1553_BCSchedLogEx@28" (ByVal condition1 As Integer, ByVal condition2 As Integer, ByVal condition3 As Integer, ByVal opcode As Integer, ByVal tagval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCSchedNop Lib "BTI1553.DLL" Alias "_BTI1553_BCSchedNop@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCSchedRetryEx Lib "BTI1553.DLL" Alias "_BTI1553_BCSchedRetryEx@28" (ByVal condition1 As Integer, ByVal condition2 As Integer, ByVal condition3 As Integer, ByVal retryflag As Integer, ByVal retries As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCSchedUser Lib "BTI1553.DLL" Alias "_BTI1553_BCSchedUser@12" (ByVal useraddr As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCSetEntry Lib "BTI1553.DLL" Alias "_BTI1553_BCSetEntry@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCTransmitMsgBlkEx Lib "BTI1553.DLL" Alias "_BTI1553_BCTransmitMsgBlkEx@20" (ByVal writeflag As Long, ByVal count As Long, ByRef xmitfieldsval As XMITFIELDS1553, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCTransmitMsgBlkInit Lib "BTI1553.DLL" Alias "_BTI1553_BCTransmitMsgBlkInit@12" (ByVal maxcount As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCTransmitMsgBlkRd Lib "BTI1553.DLL" Alias "_BTI1553_BCTransmitMsgBlkRd@16" (ByVal count As Long, ByRef xmitfieldsval As XMITFIELDS1553, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCTransmitMsgBlkWr Lib "BTI1553.DLL" Alias "_BTI1553_BCTransmitMsgBlkWr@16" (ByVal count As Long, ByRef xmitfieldsval As XMITFIELDS1553, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BlkAddr Lib "BTI1553.DLL" Alias "_BTI1553_BlkAddr@12" (ByVal taval As Long, ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Function BTI1553_BlkOptRd Lib "BTI1553.DLL" Alias "_BTI1553_BlkOptRd@12" (ByVal taval As Long, ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Function BTI1553_BlkOptWr Lib "BTI1553.DLL" Alias "_BTI1553_BlkOptWr@16" (ByVal rtopt As Integer, ByVal taval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BlkPtrRd Lib "BTI1553.DLL" Alias "_BTI1553_BlkPtrRd@12" (ByVal taval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTI1553_BlkPtrWr Lib "BTI1553.DLL" Alias "_BTI1553_BlkPtrWr@16" (ByVal descaddr As Long, ByVal taval As Long, ByVal channum As Long, ByVal handleval As Long)
